frame/support/test/tests/pallet_ui/call_invalid_vis.stderr
error: Invalid pallet::call, dispatchable function must be public: `pub fn`
  --> $DIR/call_invalid_vis.rs:20:3
   |
20 |         fn foo(origin: OriginFor<T>) -> DispatchResultWithPostInfo {
   |         ^^
